Margin adjustments to fix submit buttons on from pages on mobile.

--- a/src/app/ensembles/ensembles-create/ensembles-create.component.css
+++ b/src/app/ensembles/ensembles-create/ensembles-create.component.css
@@ -2,6 +2,7 @@
     padding-top: 20px;
     padding-left: 15px;
     padding-right: 15px;
+    margin-bottom: 50px;
 }
 
 h2{
@@ -64,6 +65,7 @@ h3 {
         padding-top: 50px;
         padding-left: 0px;
         padding-right: 0px;
+        margin-bottom: 0px;
     }
 
     .control {
