--- a/src/app/profile-creation/profile-creation.component.css
+++ b/src/app/profile-creation/profile-creation.component.css
@@ -1,7 +1,7 @@
 .content-container {
     padding-left: 15px;
     padding-right: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 @media (min-width: 700px) {
